from the filename, but it is otherwise left unchanged after
tokenization. This does not currently impact LaTeX's \input command, as
that is a macro redefinition of the standard \input primitive.

* New cross-engine option -cnf-line=STR.

* All TeX engines except tex and etex now compress (with zlib) .fmt files
  (XeTeX and LuaTeX already did so).

pTeX: new primitives \ifjfont and \iftfont.

BibTeX: now reallocates on large (>20k) field values instead of aborting.


2019 (for TeX Live 2019,  7 April 2019)
BibTeX: subsidiary .aux files are looked for in the directory of the
main .aux file, if not found as-is (to work better with -output-directory).

CWEB: now comes from the CWEBbin package
(https://github.com/ascherer/cwebbin), with translation capabilities,
more language support, and more.


2018 (for TeX Live 2018, 14 April 2018)
* Directories in the -output-directory do not mask files by the same name.

2017 (for TeX Live 2017, 19 May 2017)
2016 (for TeX Live 2016, 21 May 2016)
2015 (for TeX Live 2015, 21 May 2015)
2014 (for TeX Live 2014, 24 May 2014)
2013 (for TeX Live 2013, 30 May 2013)
* Doc changes and bug fixes.

2012 (for TeX Live 2012, 1 July 2012)
* upTeX and e-upTeX Japanese engines added.

2011 (for TeX Live 2011, 5 July 2011)
* epTeX Japanese engine added.

2010 (for TeX Live 2010, 4 June 2010)
* BibTeX line-breaking bug fix in bibtex.web.
* pTeX Japanese engine added.

2009 (for TeX Live 2009, 13 October 2009)
* --shell-restricted aka shell_escape=p for restricted shell access.
* --enable-write18 and --disable-write18 accepted as synonyms for
  --shell-escape and --no-shell-escape, for compatibility with MiKTeX.
* Omega removed; use Aleph.
* Build system now automake-based.

7.5.7 (for TeX Live 2008, 7 July 2008)
* Include Knuth's 2008 updates.
* Include LuaTeX.
* Include SyncTeX.
* Plenty of pdfTeX and MetaPost updates.
* Pool strings now compiled into the binaries instead of .pool files.
* autoconf support finally modernized.
