@@ -1,26 +1,28 @@
-# Generated by /home/texlive/karl/Master/bin/x86_64-linux/tlmgr on Sun Nov 17 18:15:53 2019
+# Generated by /home/texlive/karl/Master/bin/x86_64-linux/tlmgr on Sun Feb 16 19:07:44 2020
 # Originally written by Thomas Esser, 1998. Public domain.
 #
-# As of TeX Live 2015, fmtutil reads *all* fmtutil.cnf files found.
-# Consequently, any manual edits of this file (fmtutil.cnf in the 
-# TEXMFDIST tree) will be lost on update. So don't do that.
-#
-# For guidance on how to achieve local configurations, see the man
+# For guidance on how to support local formats, see the man
 # page of fmtutil, or the output of fmtutil --help.
+# 
+# any manual edits of this file (fmtutil.cnf in the TEXMFDIST tree) will
+# be lost on update. So don't do that.
 #
 # The format of the table is:
 #
 # format  engine  pattern-file  arguments
-#
-# The last "argument" must be the name of the file on which to run
-# the ini-engine (such as initex).  If the ini-engine is e-TeX, and the
-# e-TeX extensions should be enabled, the filename must be prefixed with
-# a * character; this is essentially equivalent to the -etex option.
-# 
-# fmtutil always passes the -ini option to the engine.
-# If no pattern-file is desired, use -.
 # Either spaces or tabs can be used as separators.
+#
+# The last "argument" must be the name of the file on which to run the
+# engine (e.g., initex). If the ini-engine is e-TeX (or compatible), and
+# the e-TeX extensions need to be enabled explicitly, the filename must
+# be prefixed with a * character; this is essentially equivalent to the
+# -etex option. (So don't use it if the engine doesn't support -etex.)
 # 
+# The purpose of the pattern-file is to support fmtutil's --byhyphen
+# option. It is not included in the command line to rebuild the format.
+# If no pattern-file is desired, use -.
+# fmtutil always passes the -ini option to the engine.
+#
 # Other notes:
 # 1) tex and amstex just load hyphen.tex. No customization.
 #    You can have your own customized (via babel's hyphen.cfg)
@@ -34,7 +36,9 @@
 # 
 # 4) usual comments start with "# ", whereas disabled configurations
 #    start with "#! " in this file.
-
+#
+# 5) The entries in the main TeX Live fmtutil.cnf are created from the
+#    AddFormat directives in (ultimately) the *.tlpsrc files. Don't edit here.
 #
 # from aleph:
 aleph aleph - *aleph.ini
@@ -111,6 +115,9 @@ mltex pdftex - -translate-file=cp227.tcx -mltex mltex.ini
 #
 # from mptopdf:
 mptopdf pdftex - -translate-file=cp227.tcx mptopdf.tex
+#
+# from optex:
+optex luatex hyphen-lan.opm optex.ini
 #
 # from pdftex:
 pdftex pdftex language.def -translate-file=cp227.tcx *pdfetex.ini
